fix: The cross button should be right aligned inside the input box

--- a/src/app/fyle/my-expenses/my-expenses.page.scss
+++ b/src/app/fyle/my-expenses/my-expenses.page.scss
@@ -125,6 +125,10 @@
         align-items: center;
       }
 
+      ::ng-deep .d-flex {
+        flex: 1;
+      }
+
       ::ng-deep .mdc-notched-outline > * {
         border-color: $black-light !important;
       }
