--- a/src/app/fyle/my-reports/my-reports.page.scss
+++ b/src/app/fyle/my-reports/my-reports.page.scss
@@ -46,6 +46,10 @@
         align-items: center;
       }
 
+      ::ng-deep .d-flex {
+        flex: 1;
+      }
+
       ::ng-deep .mdc-notched-outline > * {
         border-color: $black-light !important;
       }
